add mobile-culture to section01

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
              </h2>
               section01 - left
             </section>
-            <section class="section01-col02">
+            <section class="culture">
              <h2 class="section-title section01-title">
                 현대카드
                 <br>
@@ -174,6 +174,40 @@
                   <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img13"></i></a></li>
                 </ul>
               </article>
+            </section> 
+            <div class="mobile-cultureBtn-wrap hide">
+              <button class="mobile-cultureBtn"><span>현대카드 Space∙Culture</span></button>
+            </div>
+            <section class="mobile-culture hide">
+                    <div class="row01">
+                      <div class="closeBtn-wrap">
+                        <i class="closeLine01"></i>
+                        <i class="closeLine02"></i>
+                      </div>
+                    </div>
+                    <div class="row02">
+                      <h2>현대카드 Space∙Culture</h2>
+                      <h3>현대카드가 제안하는 새로운 영감의 공간과<br>특별한 문화경험</h3>
+                      <h4>Space</h4>
+                      <ul class="m-link-list clearfix">
+                        <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img1"></i></a></li>
+                        <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img2"></i></a></li>
+                        <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img3"></i></a></li>
+                        <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img4"></i></a></li>
+                        <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img5"></i></a></li>
+                        <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img6"></i></a></li>
+                        <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img7"></i></a></li>
+                      </ul>
+                      <h4>Culture</h4>
+                      <ul class="m-link-list clearfix">
+                        <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img8"></i></a></li>
+                        <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img9"></i></a></li>
+                        <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img10"></i></a></li>
+                        <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img11"></i></a></li>
+                        <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img12"></i></a></li>
+                        <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img13"></i></a></li>
+                      </ul>
+                    </div>
             </section>
           </div>
         </div>
