--- a/index.html
+++ b/index.html
@@ -179,16 +179,17 @@
               <button class="mobile-cultureBtn"><span>현대카드 Space∙Culture</span></button>
             </div>
             <section class="mobile-culture hide">
+              <div class="mobile-culture-rows">
                     <div class="row01">
                       <div class="closeBtn-wrap">
-                        <i class="closeLine01"></i>
-                        <i class="closeLine02"></i>
+                        <i class="btnLine btnLine01"></i>
+                        <i class="btnLine btnLine02"></i>
                       </div>
                     </div>
                     <div class="row02">
                       <h2>현대카드 Space∙Culture</h2>
                       <h3>현대카드가 제안하는 새로운 영감의 공간과<br>특별한 문화경험</h3>
-                      <h4>Space</h4>
+                      <h4><strong>Space</strong></h4>
                       <ul class="m-link-list clearfix">
                         <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img1"></i></a></li>
                         <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img2"></i></a></li>
@@ -198,7 +199,7 @@
                         <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img6"></i></a></li>
                         <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img7"></i></a></li>
                       </ul>
-                      <h4>Culture</h4>
+                      <h4><strong>Culture</strong></h4>
                       <ul class="m-link-list clearfix">
                         <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img8"></i></a></li>
                         <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img9"></i></a></li>
@@ -208,6 +209,7 @@
                         <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img13"></i></a></li>
                       </ul>
                     </div>
+                  </div>
             </section>
           </div>
         </div>
