--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="gap">
         <div class="container clearfix">
           <h1 class="logo-wrap">
-            <a href="#" class="logo">DIVE</a>
+            <a href="#section01" class="jome" alt="logo">DIVE</a>
           </h1>
           <nav class="gnb">
             <ul class="gnb-wrap clearfix">
@@ -61,7 +61,7 @@
                 </ul>
               </li>
               <li class="gnb-item">
-                <a id="gnb-item-culture" href="">culture</a>
+                <a id="gnb-item-culture" href="javascript:void(0)" alt="culture">culture</a>
                 <ul class="gnb-menu-wrap hide">
                   <li class="gnb-menu"><a href="">SUPER CONCERT</a></li>
                   <li class="gnb-menu"><a href="">CULTURE PROJECT</a></li>
@@ -76,18 +76,65 @@
             </ul>
           </nav>
           <div class="header-right">
-            <a href="#footer" class="search-btn-wrap">
+            <a href="javascript:void(0)" class="search-btn-wrap" alt="search">
               <i class="search-btn"></i>
             </a>
             <div class="mobile-gnb">
             <div class="mobile-trigger-wrap">
-              <a href="" class="mobile-trigger">
+              <a href="javascript:void(0)" class="mobile-trigger" alt="menu">
                 <i class="trigger"></i>
                 <i class="trigger"></i>
                 <i class="trigger"></i>
               </a>
             </div>
             </div>
+          </div>
+          <div class="search-area hide">
+            <ul class="search-rows">
+              <li class="search-row search-row01">
+                <button class="search-closeBtn">
+                  <i class="btnLine btnLine01"></i>
+                  <i class="btnLine btnLine02"></i>
+                </button>
+                <div class="row01-contents">
+                  <ul class="search-form clearfix">
+                    <li class="input-wrap">
+                      <input type="text" placeholder="검색어를 입력해주세요">
+                      <button class="search-icon"></button>
+                    </li>
+                  </ul>
+                  <ul class="search-result hide">
+                    <li>연관 검색어 결과 로드</li>
+                  </ul>
+                  <ul class="search-history">
+                    <li class="no-history">최근 검색어 내역이 없습니다.</li>
+                  </ul>
+                </div>
+              </li>
+              <li class="search-row search-row02">
+                <div class="row02-contents clearfix">
+                  <ul class="search-col search-tags">
+                    <h2>인기 검색어</h2>
+                    <li class="tag title-tag">
+                      <a href="javascript:void(0)" alt="tag">인기 검색어 조회</a>
+                    </li>
+                  </ul>
+                  <ul class="search-col search-event clearfix">
+                    <h2>Event</h2>
+                      <li>
+                        <a href="javascript:void(0)" alt="event">
+                        <p>#쇼미 더 부스트 (ft. MX BOOST)</p>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="javascript:void(0)" alt="event">
+                          <p>#MX부슷템 : 발로차지</p>
+                        </a>
+                      </li>
+                  </ul>
+                </div>
+              </li>
+            </ul>
           </div>
           <div class="mobile-gnb-menu hide">
             <button class="mobile-menu-btn">
@@ -100,32 +147,32 @@
                   <h1>DIVE</h1>
                   <h2>취향을 업데이트하는 <br> 힙스터들의 필수 앱</h2>
                   <div class="mobile-links-wrap clearfix">
-                    <a href="" class="mobile-link">알아보기</a>
-                    <a href="" class="mobile-link">다운로드</a>
+                    <a href="javascript:void(0)" class="mobile-link" alt="read more">알아보기</a>
+                    <a href="javascript:void(0)" class="mobile-link" alt="app download">다운로드</a>
                   </div>
                 </li>
                 <li class="scroll-cols scroll-col02">
-                  <h3 class="scroll-link"><a class="link-underline" href="">What's on</a></h3>
-                  <h3 class="scroll-link"><a href="">Space</a></h3>
+                  <h3 class="scroll-link"><a class="link-underline" href="javascript:void(0)" alt="what's on">What's on</a></h3>
+                  <h3 class="scroll-link"><a href="javascript:void(0)" alt="space">Space</a></h3>
                     <ul class="sub-menu-wrap">
-                      <li class="sub-menu"><a class="link-underline" href="">DESIGN LIBRARY</a></li>
-                      <li class="sub-menu"><a class="link-underline" href="">TRAVEL LIBRARY</a></li>
-                      <li class="sub-menu"><a class="link-underline" href="">MUSIC LIBRARY</a></li>
-                      <li class="sub-menu"><a class="link-underline" href="">COOKING LABRARY</a></li>
-                      <li class="sub-menu"><a class="link-underline" href="">LINDERSTATE</a></li>
-                      <li class="sub-menu"><a class="link-underline" href="">VINYL & PLASTIC</a></li>
-                      <li class="sub-menu"><a class="link-underline" href="">STORAGE</a></li>
+                      <li class="sub-menu"><a class="link-underline" href="javascript:void(0)" alt="library">DESIGN LIBRARY</a></li>
+                      <li class="sub-menu"><a class="link-underline" href="javascript:void(0)" alt="library">TRAVEL LIBRARY</a></li>
+                      <li class="sub-menu"><a class="link-underline" href="javascript:void(0)" alt="library">MUSIC LIBRARY</a></li>
+                      <li class="sub-menu"><a class="link-underline" href="javascript:void(0)" alt="library">COOKING LABRARY</a></li>
+                      <li class="sub-menu"><a class="link-underline" href="javascript:void(0)" alt="library">LINDERSTATE</a></li>
+                      <li class="sub-menu"><a class="link-underline" href="javascript:void(0)" alt="library">VINYL & PLASTIC</a></li>
+                      <li class="sub-menu"><a class="link-underline" href="javascript:void(0)" alt="library">STORAGE</a></li>
                     </ul>
-                  <h3 class="scroll-link"><a href="">Culture</a></h3>
+                  <h3 class="scroll-link"><a href="javascript:void(0)" alt="culture">Culture</a></h3>
                     <ul class="sub-menu-wrap">
-                      <li class="sub-menu"><a class="link-underline" href="">SUPER CONCERT</a></li>
-                      <li class="sub-menu"><a class="link-underline" href="">CULTURE PROJECT</a></li>
-                      <li class="sub-menu"><a class="link-underline" href="">DAVINCI MOTEL</a></li>
-                      <li class="sub-menu"><a class="link-underline" href="">OVER THE RECORD</a></li>
-                      <li class="sub-menu"><a class="link-underline" href="">FAN MADE LIVE</a></li>
-                      <li class="sub-menu"><a class="link-underline" href="">LIMITIED VINYL CLUB</a></li>
+                      <li class="sub-menu"><a class="link-underline" href="javascript:void(0)" alt="culture menu">SUPER CONCERT</a></li>
+                      <li class="sub-menu"><a class="link-underline" href="javascript:void(0)" alt="culture menu">CULTURE PROJECT</a></li>
+                      <li class="sub-menu"><a class="link-underline" href="javascript:void(0)" alt="culture menu">DAVINCI MOTEL</a></li>
+                      <li class="sub-menu"><a class="link-underline" href="javascript:void(0)" alt="culture menu">OVER THE RECORD</a></li>
+                      <li class="sub-menu"><a class="link-underline" href="javascript:void(0)" alt="culture menu">FAN MADE LIVE</a></li>
+                      <li class="sub-menu"><a class="link-underline" href="javascript:void(0)" alt="culture menu">LIMITIED VINYL CLUB</a></li>
                     </ul>
-                  <h3 class="scroll-link"><a class="link-underline" href="">Post</a></h3>
+                  <h3 class="scroll-link"><a class="link-underline" href="javascript:void(0)" alt="post">Post</a></h3>
                 </li>
               </ul>
             </div>
@@ -154,24 +201,24 @@
               <article class="link-box link-box01">
                 <h3 class="link-box-title">space</h3>
                 <ul class="link-list clearfix">
-                  <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img1"></i></a></li>
-                  <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img2"></i></a></li>
-                  <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img3"></i></a></li>
-                  <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img4"></i></a></li>
-                  <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img5"></i></a></li>
-                  <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img6"></i></a></li>
-                  <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img7"></i></a></li>
+                  <li class="link-item"><a href="javascript:void(0) alt="space"><i class="link-img link-img1"></i></a></li>
+                  <li class="link-item"><a href="javascript:void(0) alt="space"><i class="link-img link-img2"></i></a></li>
+                  <li class="link-item"><a href="javascript:void(0) alt="space"><i class="link-img link-img3"></i></a></li>
+                  <li class="link-item"><a href="javascript:void(0) alt="space"><i class="link-img link-img4"></i></a></li>
+                  <li class="link-item"><a href="javascript:void(0) alt="space"><i class="link-img link-img5"></i></a></li>
+                  <li class="link-item"><a href="javascript:void(0) alt="space"><i class="link-img link-img6"></i></a></li>
+                  <li class="link-item"><a href="javascript:void(0) alt="space"><i class="link-img link-img7"></i></a></li>
                 </ul>
               </article>
               <article class="link-box link-box02">
                 <h3 class="link-box-title">culture</h3>
                 <ul class="link-list clearfix">
-                  <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img8"></i></a></li>
-                  <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img9"></i></a></li>
-                  <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img10"></i></a></li>
-                  <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img11"></i></a></li>
-                  <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img12"></i></a></li>
-                  <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img13"></i></a></li>
+                  <li class="link-item"><a href="javascript:void(0)" alt="culture"><i class="link-img link-img8"></i></a></li>
+                  <li class="link-item"><a href="javascript:void(0)" alt="culture"><i class="link-img link-img9"></i></a></li>
+                  <li class="link-item"><a href="javascript:void(0)" alt="culture"><i class="link-img link-img10"></i></a></li>
+                  <li class="link-item"><a href="javascript:void(0)" alt="culture"><i class="link-img link-img11"></i></a></li>
+                  <li class="link-item"><a href="javascript:void(0)" alt="culture"><i class="link-img link-img12"></i></a></li>
+                  <li class="link-item"><a href="javascript:void(0)" alt="culture"><i class="link-img link-img13"></i></a></li>
                 </ul>
               </article>
             </section> 
@@ -189,25 +236,27 @@
                     <div class="row02">
                       <h2>현대카드 Space∙Culture</h2>
                       <h3>현대카드가 제안하는 새로운 영감의 공간과<br>특별한 문화경험</h3>
-                      <h4><strong>Space</strong></h4>
-                      <ul class="m-link-list clearfix">
-                        <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img1"></i></a></li>
-                        <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img2"></i></a></li>
-                        <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img3"></i></a></li>
-                        <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img4"></i></a></li>
-                        <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img5"></i></a></li>
-                        <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img6"></i></a></li>
-                        <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img7"></i></a></li>
-                      </ul>
-                      <h4><strong>Culture</strong></h4>
-                      <ul class="m-link-list clearfix">
-                        <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img8"></i></a></li>
-                        <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img9"></i></a></li>
-                        <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img10"></i></a></li>
-                        <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img11"></i></a></li>
-                        <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img12"></i></a></li>
-                        <li class="link-item"><a href="javascript:void(0)"><i class="link-img link-img13"></i></a></li>
-                      </ul>
+                      <div class="m-link-list-wrap">
+                        <h4><strong>Space</strong></h4>
+                        <ul class="m-link-list clearfix">
+                          <li class="link-item"><a href="javascript:void(0)" alt="space"><i class="link-img link-img1"></i></a></li>
+                          <li class="link-item"><a href="javascript:void(0)" alt="space"><i class="link-img link-img2"></i></a></li>
+                          <li class="link-item"><a href="javascript:void(0)" alt="space"><i class="link-img link-img3"></i></a></li>
+                          <li class="link-item"><a href="javascript:void(0)" alt="space"><i class="link-img link-img4"></i></a></li>
+                          <li class="link-item"><a href="javascript:void(0)" alt="space"><i class="link-img link-img5"></i></a></li>
+                          <li class="link-item"><a href="javascript:void(0)" alt="space"><i class="link-img link-img6"></i></a></li>
+                          <li class="link-item"><a href="javascript:void(0)" alt="space"><i class="link-img link-img7"></i></a></li>
+                        </ul>
+                        <h4><strong>Culture</strong></h4>
+                        <ul class="m-link-list clearfix">
+                          <li class="link-item"><a href="javascript:void(0)" alt="culture menu"><i class="link-img link-img8"></i></a></li>
+                          <li class="link-item"><a href="javascript:void(0)" alt="culture menu"><i class="link-img link-img9"></i></a></li>
+                          <li class="link-item"><a href="javascript:void(0)" alt="culture menu"><i class="link-img link-img10"></i></a></li>
+                          <li class="link-item"><a href="javascript:void(0)" alt="culture menu"><i class="link-img link-img11"></i></a></li>
+                          <li class="link-item"><a href="javascript:void(0)" alt="culture menu"><i class="link-img link-img12"></i></a></li>
+                          <li class="link-item"><a href="javascript:void(0)" alt="culture menu"><i class="link-img link-img13"></i></a></li>
+                        </ul>
+                      </div>
                     </div>
                   </div>
             </section>
@@ -221,7 +270,7 @@
           <div class="container">
            <h2 class="section-title full-title clearfix">
              <span class="title-text">post</span>
-             <a href="" class="title-more">전체보기</a>
+             <a href="javascript:void(0)" class="title-more" alt="more">전체보기</a>
            </h2>
             section02 - post
           </div>
@@ -234,11 +283,11 @@
           <div class="container">
            <h2 class="section-title full-title clearfix">
              <span class="title-text">event</span>
-             <a href="" class="title-more">전체보기</a>
+             <a href="javascript:void(0)" class="title-more" alt="more">전체보기</a>
            </h2>
            <div class="event-wrap clearfix">
             <div class="event-box event-box01">
-              <a href="" class="event-link">
+              <a href="javascript:void(0)" class="event-link" alt="event">
                 <h3 class="event-text">
                     #MX부슷템: 중독됐구미
                   <p>MX부슷툰 댓글 이벤트 #1</p>
@@ -246,7 +295,7 @@
               </a>
               </div>
             <div class="event-box event-box02">
-              <a href="" class="event-link">
+              <a href="javascript:void(0)" class="event-link" alt="event">
                 <h3 class="event-text">
                     #쇼미 더 부스트 (ft. MX BOOST)
                   <p>MX BOOST 굿즈 랜덤 당첨 기회!</p>
