--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="gap">
         <div class="container clearfix">
           <h1 class="logo-wrap">
-            <a href="#section01" class="jome" alt="logo">DIVE</a>
+            <a href="#section01" class="logo" alt="home">DIVE</a>
           </h1>
           <nav class="gnb">
             <ul class="gnb-wrap clearfix">
@@ -138,8 +138,8 @@
           </div>
           <div class="mobile-gnb-menu hide">
             <button class="mobile-menu-btn">
-              <i class="mobile-btn-bar01"></i>
-              <i class="mobile-btn-bar02"></i>
+              <i class="mobile-btn-bar mobile-btn-bar01"></i>
+              <i class="mobile-btn-bar mobile-btn-bar02"></i>
             </button>
             <div class="scroll-menu">
               <ul class="scroll-wrap">
