--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
                 <div class="row02-contents clearfix">
                   <ul class="search-col search-tags">
                     <h2>인기 검색어</h2>
-                    <li class="tag title-tag">
-                      <a href="javascript:void(0)" alt="tag">인기 검색어 조회</a>
-                    </li>
+                    <!-- <li class="tag">
+                      <a href="javascript:void(0)" alt="tag"></a>
+                    </li> -->
                   </ul>
                   <ul class="search-col search-event clearfix">
                     <h2>Event</h2>
@@ -133,6 +133,25 @@
                       </li>
                   </ul>
                 </div>
+              </li>
+            </ul>
+          </div>
+          <div class="m-search-area hide">
+            <button class="m-search-closeBtn"></button>
+            <ul class="m-search-rows-wrap">
+              <li class="m-search-row01">
+                <input type="text" name="search" id="search" placeholder="검색어를 입력해 주세요">
+                <i class="search-cleanBtn"></i>
+              </li>
+              <li class="m-search-row02 clearfix">
+                <a href="javascript:void(0)">인기 검색어</a>
+                <a href="javascript:void(0)">최근 검색어</a>
+              </li>
+              <li class="m-search-row03">
+                <ul class="search-tags m-search-tags" id="search-tags"></ul>
+                <ul class="search-history m-search-history" id="search-history">
+                  <li class="history no-history">최근 검색어 내역이 없습니다.</li>
+                </ul>
               </li>
             </ul>
           </div>
