--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
                 <div class="row01-contents">
                   <ul class="search-form clearfix">
                     <li class="input-wrap">
-                      <input type="text" placeholder="검색어를 입력해주세요">
+                      <input class="search-input" type="text" placeholder="검색어를 입력해주세요">
+                      <i class="search-cleanBtn hide"></i>
                       <button class="search-icon"></button>
                     </li>
                   </ul>
@@ -139,9 +140,9 @@
           <div class="m-search-area hide">
             <button class="m-search-closeBtn"></button>
             <ul class="m-search-rows-wrap">
-              <li class="m-search-row01">
-                <input type="text" name="search" id="search" placeholder="검색어를 입력해 주세요">
-                <i class="search-cleanBtn"></i>
+              <li class="m-search-row01 input-wrap">
+                <input type="text" name="search" class="search-input" placeholder="검색어를 입력해 주세요">
+                <i class="search-cleanBtn hide"></i>
               </li>
               <li class="m-search-row02 clearfix">
                 <a href="javascript:void(0)">인기 검색어</a>
