--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
           </h1>
           <nav class="gnb">
             <ul class="gnb-wrap clearfix">
-              <li class="gnb-item"><a href="">what's on</a></li>
+              <li class="gnb-item"><a href="javascript:void(0)" alt="menu">what's on</a></li>
               <li class="gnb-item">
-                <a id="gnb-item-space" href="">space</a>
+                <a id="gnb-item-space" href="javascript:void(0)" alt="menu">space</a>
                 <ul class="gnb-menu-wrap hide">
                   <li class="gnb-menu"><a href="">DESIGN LIBRARY</a></li>
                   <li class="gnb-menu"><a href="">TRAVEL LIBRARY</a></li>
@@ -71,7 +71,7 @@
                   <li class="gnb-menu"><a href="">LIMITIED VINYL CLUB</a></li>
                 </ul>
               </li>
-              <li class="gnb-item"><a href="">post</a></li>
+              <li class="gnb-item"><a href="javascript:void(0)" alt="menu">post</a></li>
               <li class="gnb-bar"></li>
             </ul>
           </nav>
