--- a/index.html
+++ b/index.html
@@ -537,28 +537,28 @@
               </li>
             </ul>
             <ul class="m-notice-contents">
-              <li class="m-notice-item">
+              <li class="m-notice-acc">
                 <a href="">
                   <h3>설 연휴 기간 휴관 안내 드립니다.</h3>
                   <span>2021.02.04</span>
-                  <div class="acc-menu"></div>
                   </a>
+                <div class="m-acc-menu" data-acc="acc-1"></div>
               </li>
-              <li class="m-notice-item">
+              <li class="m-notice-acc">
                 <a href="">
                   <h3>1월 28일 행사에 따른 단축 운영 안내드립니다.</h3>
-                  <span>Music Library</span>
+                  <span class="notice-lib">Music Library</span>
                   <span>2021.01.22</span>
-                  <div class="acc-menu"></div>
                 </a>
+                <div class="m-acc-menu" data-acc="acc-2"></div>
               </li>
-              <li class="m-notice-item">
+              <li class="m-notice-acc">
                 <a href="">
                   <h3>라이브러리 Complete Collection 열람 제한 안내 드립니다.</h3>
-                  <span>Design Library</span>
+                  <span class="notice-lib">Design Library</span>
                   <span>2021.12.24</span>
-                  <div class="acc-menu"></div>
                 </a>
+                <div class="m-acc-menu" data-acc="acc-3"></div>
               </li>
             </ul>
           </div>
