add scroll top btn

--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
         </div>
       </div>
     </section>
-     <section id="section05">
+    <section id="section05">
         <div class="wrap">
           <div class="gap">
             <div class="container">
@@ -617,10 +617,11 @@
               </div>
             </div>
           </div>
-      </section>
+    </section>
   </main>
   <!--footer-->
   <footer id="footer">
+    <button class="scroll-top-btn"></button>
     <div class="wrap">
       <div class="gap">
         <div class="container">
