fix gnb hover event

--- a/index.html
+++ b/index.html
@@ -51,9 +51,11 @@
           </h1>
           <nav class="gnb">
             <ul class="gnb-wrap clearfix">
-              <li class="gnb-item"><a href="javascript:void(0)" alt="menu">what's on</a></li>
               <li class="gnb-item">
-                <a class="gnb-depth-item" href="javascript:void(0)" alt="menu">space</a>
+                <a class="gnb-item-link" href="javascript:void(0)" alt="menu">what's on</a>
+              </li>
+              <li class="gnb-item">
+                <a class="gnb-depth-item gnb-item-link" href="javascript:void(0)" alt="menu">space</a>
                 <ul class="gnb-menu-wrap hide">
                   <li class="gnb-menu"><a href="">DESIGN LIBRARY</a></li>
                   <li class="gnb-menu"><a href="">TRAVEL LIBRARY</a></li>
@@ -65,7 +67,7 @@
                 </ul>
               </li>
               <li class="gnb-item">
-                <a class="gnb-depth-item" href="javascript:void(0)" alt="culture">culture</a>
+                <a class="gnb-depth-item gnb-item-link" href="javascript:void(0)" alt="culture">culture</a>
                 <ul class="gnb-menu-wrap hide">
                   <li class="gnb-menu"><a href="">SUPER CONCERT</a></li>
                   <li class="gnb-menu"><a href="">CULTURE PROJECT</a></li>
@@ -75,7 +77,9 @@
                   <li class="gnb-menu"><a href="">LIMITIED VINYL CLUB</a></li>
                 </ul>
               </li>
-              <li class="gnb-item"><a href="javascript:void(0)" alt="menu">post</a></li>
+              <li class="gnb-item">
+                <a class="gnb-item-link" href="javascript:void(0)" alt="menu">post</a>
+              </li>
               <li class="gnb-bar"></li>
             </ul>
           </nav>
